--- a/app/css/app.css
+++ b/app/css/app.css
@@ -29,6 +29,10 @@
   padding: 0;
 }
 
+.navbar {
+  margin-bottom: 0;
+}
+
 /*navbar brand text*/
 .navbar-default .navbar-brand {
   color: #06ba8f;
