Integrate firebase and angularFire

--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,1 +1,4 @@
-<p>This is the partial for view 1.</p>
+<div class="container">
+  <h1>This is where the magic happens</h1>
+  {{commitmnts}}
+</div>
