--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -5,7 +5,7 @@
       <p>
         A tool for keeping track of and reaching your goals.
       </p>
-      <a href="#" class="btn btn-outline-inverse btn-lg">Get started today</a>
+      <a ng-hide="auth.user" href="#/new_user" class="btn btn-outline-inverse btn-lg">Get started today</a>
     </div>
     <span id="jumbotron-icon" class="glyphicon glyphicon-list"></span>
   </div>
