--- a/app/partials/commitmnts.html
+++ b/app/partials/commitmnts.html
@@ -10,10 +10,17 @@
   <ul id="commitmnts" class="list-group">
     <li class="list-group-item commitmnt" ng-class="{completedCommitmnt: commitmnt.completed==true, brokenCommitmnt: commitmnt.completed==false}" ng-repeat="(id, commitmnt) in commitmnts">
       {{commitmnt.text}}
-      <div class="commitmntBarRight">
+      <div class="commitmntBarRight" ng-show="commitmnt.completed==undefined">
         <button type="button" class="btn btn-xs btn-success" ng-click="completeCommitmnt(id)"><span class="glyphicon glyphicon-ok"></span></button>
         <button type="button" class="btn btn-xs btn-danger" ng-click="breakCommitmnt(id)"><span class="glyphicon glyphicon-remove"></span></button>
       </div>
     </li>
   </ul>
+  <div id="stats">
+    <h2>Statistics</h2>
+    <h5>Score:</h5> {{(stats.completedCommitmnts / (stats.completedCommitmnts + stats.brokenCommitmnts))*100 | number:2}}%
+    <h5>Total commitmnts:</h5> {{stats.commitmntCount}}
+    <h5>Completed commitmnts:</h5> {{stats.completedCommitmnts}}
+    <h5>Broken commitmnts:</h5> {{stats.brokenCommitmnts}}
+  </div>
 </div>
