--- a/app/partials/commitmnts.html
+++ b/app/partials/commitmnts.html
@@ -23,6 +23,7 @@
     <div class="col-md-6">
       <div id="stats">
         <h1>Statistics</h1>
+        <img src="http://www.gravatar.com/avatar/{{auth.user.md5_hash}}?s=140" alt="Profile picture" class="img-circle">
         <h5>Score:</h5> {{(stats.completedCommitmnts / (stats.completedCommitmnts + stats.brokenCommitmnts))*100 | number:2}}%
         <h5>Total commitmnts:</h5> {{stats.commitmntCount}}
         <h5>Completed commitmnts:</h5> {{stats.completedCommitmnts}}
