--- a/app/css/app.css
+++ b/app/css/app.css
@@ -94,9 +94,13 @@
   margin-bottom: 10px;
 }
 
-#newCommitmnt {
+#newCommitmntFormGroup{
   float: left;
-  width: 86%;
+  width: calc(100% - 61px);
+}
+
+#addButton {
+  margin-left: 10px;
 }
 
 .commitmntBarRight {
